# mini-code

./: .gitignore  Cargo.toml
.claude/skills/arch-design/: SKILL.md
.claude/skills/product-design/: SKILL.md
.claude/skills/test-case-generator/: SKILL.md
docs/: ARCH-v2.0.md  PRD-v2.0.md  test-cases.md
docs/superpowers/plans/: 2026-05-15-mini-code-impl.md
docs/superpowers/specs/: 2026-05-15-mini-code-design.md
src/: anthropic.rs  config.rs  lib.rs  main.rs  message_history.rs  permissions.rs  repl.rs  session.rs
src/tools/: bash.rs  list_dir.rs  mod.rs  read_file.rs  search_replace.rs  write_file.rs
tests/: integration_test.rs
