[package]
name = "mini-code"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "mini-code"
path = "src/main.rs"

[lib]
name = "mini_code"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rustyline = "15"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
colored = "3"
glob = "0.3"
regex = "1"
futures = "0.3"

[dev-dependencies]
mockito = "1"
tempfile = "3"
